objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>SunPower Master Lead Process</fullName>
        <description>Lead Process for Customers - Residential, Light Commercial, Systems, New Homes &amp; Prospective Partners</description>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Awaiting Qualification Review</fullName>
        </values>
        <values>
            <fullName>Contacted %E2%80%93 Engaged</fullName>
        </values>
        <values>
            <fullName>Contacted%E2%80%93 Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Not Yet Qualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pre-Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>SPAM</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SunPower Residential Leads Process</fullName>
        <description>For Residential Leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment Confirmed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Contacted%E2%80%93 Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Disqualified Sales</fullName>
        </values>
        <values>
            <fullName>Marketing Qualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Yet Qualified</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partner Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Ready for Assignment - EU Only</fullName>
        </values>
        <values>
            <fullName>Sales Accepted</fullName>
        </values>
        <values>
            <fullName>Warm Transfer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SunPower Systems Lead Process</fullName>
        <description>Large Commercial and UPP (Utility and Power Plant)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Contacted %E2%80%93 Engaged</fullName>
        </values>
        <values>
            <fullName>Contacted%E2%80%93 Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Not Yet Qualified</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pre-Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Sales Accepted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALR_Assignment_Audit_Trail__c</fullName>
        <description>SPD: replica of opportunity ALR_assignment_audit_trail. We have moved ALR conversion from Opptty to Leads. This field is a look up to the trail object.</description>
        <label>ALR Assignment Audit Trail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Large Account</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acres_of_Trees__c</fullName>
        <label>Acres of Trees</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Note__c</fullName>
        <label>Admin Note</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Account_Manager__c</fullName>
        <label>Affiliate Account Manager</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Affiliate Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_Agreement_Status__c</fullName>
        <label>Affiliate Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliate_Lead_Expired_Date__c</fullName>
        <label>Affiliate Lead Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliate_Lead_Registered_Date__c</fullName>
        <label>Affiliate Lead Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliate_Registration_Expiration_Date__c</fullName>
        <formula>Affiliate_Lead_Registered_Date__c  + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Registration Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age_of_Roof__c</fullName>
        <inlineHelpText>Test text by MKD</inlineHelpText>
        <label>Age of Roof</label>
        <picklist>
            <controllingField>Location_of_Installation__c</controllingField>
            <picklistValues>
                <fullName>&lt; 5 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 5 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 10 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 15 yrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <description>created for reports

IF(ISNULL( SSO_First_Contact_Date_Time__c ),&apos;&apos;, IF( YEAR(DATEVALUE(SSO_First_Contact_Date_Time__c)) =YEAR( DATEVALUE( Lead_CreatedDate__c ) ) , TEXT(ABS( MONTH( DATEVALUE(SSO_First_Contact_Date_Time__c)) -MONTH( DATEVALUE( Lead_CreatedDate__c ) ) )*30 ), TEXT(ABS (( YEAR(DATEVALUE(SSO_First_Contact_Date_Time__c)) -YEAR( DATEVALUE( Lead_CreatedDate__c ) ))*365+(MONTH(DATEVALUE(SSO_First_Contact_Date_Time__c)) -MONTH( DATEVALUE( Lead_CreatedDate__c ) ))*30))  ))

IF( ISNULL( SSO_First_Contact_Date__c ), &apos;&apos;, TEXT( SSO_First_Contact_Date__c - DATEVALUE(CreatedDate) ) )</description>
        <formula>IF( ISNULL( SSO_First_Contact_Date__c ), TEXT( TODAY() - DATEVALUE(CreatedDate+(1/24))), TEXT( SSO_First_Contact_Date__c - DATEVALUE(CreatedDate+(1/24))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_to_turn_off_the_system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree to turn off the system</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Program_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifier for whether the Lead belongs to Aliance Program</description>
        <label>Alliance Program Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Already_Receiving_Quotes__c</fullName>
        <label>Already Receiving Quotes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Referred Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Short_Code__c</fullName>
        <label>Referring Short Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Demand__c</fullName>
        <label>Anticipated Demand</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full Containers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_Time__c</fullName>
        <description>Concatenation of Appointment Date field with Appointment Time picklist field mapped to Opportunity for SPD appointment reminder 48-hr prior to appointment calls CASE# 00545047</description>
        <formula>IF(ISPICKVAL(Appointment_Time__c, &apos;5:00 PM&apos;),(DATETIMEVALUE( TEXT ((Appointment_Date__c)+ 1) &amp; &apos; &apos; &amp;&apos;00:00:00&apos;)), 
IF(ISPICKVAL(Appointment_Time__c, &apos;5:30 PM&apos;),(DATETIMEVALUE( TEXT ((Appointment_Date__c)+ 1) &amp; &apos; &apos; &amp;&apos;00:30:00&apos;)), 
IF(ISPICKVAL(Appointment_Time__c, &apos;6:00 PM&apos;),(DATETIMEVALUE( TEXT ((Appointment_Date__c)+ 1) &amp; &apos; &apos; &amp;&apos;01:00:00&apos;)), 
IF(ISPICKVAL(Appointment_Time__c, &apos;6:30 PM&apos;),(DATETIMEVALUE( TEXT ((Appointment_Date__c)+ 1) &amp; &apos; &apos; &amp;&apos;01:30:00&apos;)), 
IF(ISPICKVAL(Appointment_Time__c, &apos;7:00 PM&apos;),(DATETIMEVALUE( TEXT ((Appointment_Date__c)+ 1) &amp; &apos; &apos; &amp;&apos;02:00:00&apos;)), 
IF(ISPICKVAL(Appointment_Time__c, &apos;7:30 PM&apos;),(DATETIMEVALUE( TEXT ((Appointment_Date__c)+ 1) &amp; &apos; &apos; &amp;&apos;02:30:00&apos;)), 
IF((ISPICKVAL(Appointment_Time__c, &apos;7:00 AM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;7:30 AM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;8:00 AM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;8:30 AM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;9:00 AM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;9:30 AM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;10:00 AM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;10:30 AM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;11:00 AM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;11:30 AM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;12:00 PM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;12:30 PM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;1:00 PM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;1:30 PM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;2:00 PM&apos;) || ISPICKVAL(Appointment_Time__c, &apos;2:30 PM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;3:00 PM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;3:30 PM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;4:00 PM&apos;) || 
ISPICKVAL(Appointment_Time__c, &apos;4:30 PM&apos;)), 
(DATETIMEVALUE( TEXT ( Appointment_Date__c ) &amp; &apos; &apos; &amp; 
CASE((TEXT(Appointment_Time__c)), 
&apos;7:00 AM&apos;, &apos;14:00:00&apos;, 
&apos;7:30 AM&apos;, &apos;14:30:00&apos;, 
&apos;8:00 AM&apos;, &apos;15:00:00&apos;, 
&apos;8:30 AM&apos;, &apos;15:30:00&apos;, 
&apos;9:00 AM&apos;, &apos;16:00:00&apos;, 
&apos;9:30 AM&apos;, &apos;16:30:00&apos;, 
&apos;10:00 AM&apos;, &apos;17:00:00&apos;, 
&apos;10:30 AM&apos;, &apos;17:30:00&apos;, 
&apos;11:00 AM&apos;, &apos;18:00:00&apos;, 
&apos;11:30 AM&apos;, &apos;18:30:00&apos;, 
&apos;12:00 PM&apos;, &apos;19:00:00&apos;, 
&apos;12:30 PM&apos;, &apos;19:30:00&apos;, 
&apos;1:00 PM&apos;, &apos;20:00:00&apos;, 
&apos;1:30 PM&apos;, &apos;20:30:00&apos;, 
&apos;2:00 PM&apos;, &apos;21:00:00&apos;, 
&apos;2:30 PM&apos;, &apos;21:30:00&apos;, 
&apos;3:00 PM&apos;, &apos;22:00:00&apos;, 
&apos;3:30 PM&apos;, &apos;22:30:00&apos;, 
&apos;4:00 PM&apos;, &apos;23:00:00&apos;, 
&apos;2:00 PM&apos; 
))),null 
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <description>SPD: Appointment Date for SAs to make an appointment with Customer. Once this is filled, lead coan convert into Oppty automatically.</description>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <description>SPD: Appointment Time for SAs to make an appointment with Customer. Once this is filled, lead will convert into Oppty automatically.</description>
        <label>Appointment Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_There_Other_Decision_Makers__c</fullName>
        <description>Solar Advisor qualifiers when handling Direct(SPD) Leads;See if there are any other decision makers(SPD Proj)</description>
        <label>Are There Other Decision Makers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <label>Area of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party PV+BOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cells Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mounted (EPC, PCW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mounted (EPC, PPA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV+BOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV+BOS (T10/T5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV + BOS (T10/T5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Mounted (EPC, PCW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Mounted (EPC, PPA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Mounted (PPA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_Space__c</fullName>
        <label>Available Space (sq ft/ha/acres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Electricity_Bill__c</fullName>
        <label>Average Monthly Electricity Bill</label>
        <picklist>
            <picklistValues>
                <fullName>$0 to $1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000 to $3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,000 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 to $20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000 to $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 to $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than $100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$101 to $150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$151 to $200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$201 to $250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$251 to $300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than $300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_kWh__c</fullName>
        <label>Avg $/kWh</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>Text(Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <inlineHelpText>Enter a 2-hour block (e.g. 8:00 AM to 10:00 AM)</inlineHelpText>
        <label>Best Time to Call</label>
        <picklist>
            <picklistValues>
                <fullName>now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8am-noon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>noon-4pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4pm-6pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6pm-8pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8pm-10pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Required__c</fullName>
        <label>Customer Project Budget</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>RLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Intl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Intl</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CASESAFEID__c</fullName>
        <description>SPD: This field is created for reporting purposes. Reports do not display 18 character id. This field will display 18 characters. For excel lookups this is needed else record is not found.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attempt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field tracks the number of times the lead has been called by the sales rep</description>
        <label>Call Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do-It-Yourself(er)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventor/R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor/Stock Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Seeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Grid/Thermal/Heater/Other solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner List Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Inquiry (Product only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Bidder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researcher/Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Info Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer/Passed To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified Opportunity</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Association_Date__c</fullName>
        <description>Created for Case#00082899(reporting purpose) - Date/Time when Lead Campaign Member is added.</description>
        <label>Campaign Association Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_First_Added__c</fullName>
        <label>Campaign First Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_on_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign on Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Challenging_Roof__c</fullName>
        <label>Challenging Roof</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-Limited Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-Obstructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-Roof type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClickShiftId__c</fullName>
        <description>Used by incoming Web Leads - contains the GUI ID</description>
        <label>ClickShiftId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>nH: Pat Hverdejs- asked to create this for New Homes. Dart (Marketing will populate this on the microsite, This will flow into Spectrum via Opportunity.
This is the date the property was purchased by the owner.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Operation_Date__c</fullName>
        <label>Commercial Operation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Residential_Business_Split__c</fullName>
        <label>Commercial &amp; Residential Business Split?</label>
        <picklist>
            <controllingField>Total_Experience_in_Solar_Business__c</controllingField>
            <picklistValues>
                <fullName>Commercial - 100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 10% / Commercial - 90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 20% / Commercial - 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 30% / Commercial - 70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 40% / Commercial - 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 50% / Commercial - 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 60% / Commercial - 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 70% / Commercial - 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 80% / Commercial - 20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - 90% / Commercial - 10%</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competing_Partner_Status__c</fullName>
        <description>SPD: Field to display competing partner link. Red-competing partner within a month, yellow-over a month, green-no competing partner. SPD does not want to compete with existing partners if those are fresh leads.</description>
        <formula>CASE( HD_Competing_Partner_Indicator__c , 
     1, HYPERLINK(&apos;/apex/PartnerCompetitionMatches?Id=&apos; +  Id , IMAGE(&apos;/resource/CompetingPartnerRed&apos;, &apos;Red&apos;))  ,
     2, HYPERLINK(&apos;/apex/PartnerCompetitionMatches?Id=&apos; +  Id , IMAGE(&apos;/resource/CompetingPartnerYellow&apos;, &apos;Yellow&apos;)), 
     3, IMAGE(&apos;/resource/CompetingPartnerGreen&apos;, &apos;Green&apos;),
        null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competing Partner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Competitor)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirm_Legal_Name_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Solar Advisor qualifiers when handling Direct(SPD) Leads;Please confirm contacts legal name (SPD Proj)</description>
        <label>Confirm Legal Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultation_Type__c</fullName>
        <description>Solar Advisor selects the type of consultation with the homeowner if it is online or via a webex</description>
        <inlineHelpText>Select the type  of consultation</inlineHelpText>
        <label>Consultation Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-Person</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Not Reached – Send to Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Center 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Center 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Center 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>